testdata/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo
spec:
  containers:
  - image: nginx:1.12
    imagePullPolicy: IfNotPresent
    name: web
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
