testdata/validatingwebhookconfigurations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "test-pod-policy.example.com"
webhooks:
- name: "test-pod-policy.example.com"
  rules:
  - apiGroups:   ["batch"]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["job"]
    scope:       "Namespaced"

  clientConfig:
    service:
      namespace: "example-namespace"
      name: "example-service"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
